--- a/ViewSubSport.html
+++ b/ViewSubSport.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    
+
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" type="image/ico" href="http://www.datatables.net/media/images/favicon.ico" />
     <link href="css/demo_table.css" rel="stylesheet" type="text/css" />
@@ -47,7 +47,7 @@
 			{
 
 			    type: "POST",
-			    url: "http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetHomePageHeading",
+			    url: "http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetHomePageHeading",
 			    data: JSON.stringify(data),
 			    contentType: "application/json; charset=utf-8",
 			    dataType: "json",
@@ -73,7 +73,7 @@
             var data = { "sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetRecentArticelsSection',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetRecentArticelsSection',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -96,7 +96,7 @@
             var data = { "userName": $.Storage.get("UserName"), "sport": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/IsUserAFollower',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/IsUserAFollower',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -107,9 +107,9 @@
                         queryString = queryString.replace('%20', '  ');
                         $("#DivUnFollow").show();
                         $("#LiteralIsFollowingMessage").text("You are following " + queryString);
-                        $("#DivFollow").hide();                     
+                        $("#DivFollow").hide();
                         $("#LinkButtonUnFollow").show();
-                        $("#LinkButtonUnfollow").html('If you would like to stop following this  Home Page, click here');                        
+                        $("#LinkButtonUnfollow").html('If you would like to stop following this  Home Page, click here');
                         $("#LinkButtonFollow").hide();
 
                     }
@@ -136,7 +136,7 @@
             var data = { "_sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/HandleSportCountIncrementing',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/HandleSportCountIncrementing',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -157,7 +157,7 @@
             var data = { "sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetNumberOfSportImpressions',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetNumberOfSportImpressions',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -180,7 +180,7 @@
             var data = { "sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetSportHierarchy',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetSportHierarchy',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -200,7 +200,7 @@
             var data = { "sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetSportDefinition',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetSportDefinition',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -220,7 +220,7 @@
             queryString = getUrlVars()["SportName"]; queryString = queryString.replace('%20', '  ');
             var data = { "currentPage": "Main", "_sportName": queryString };
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/EncodeSubNav',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/EncodeSubNav',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -242,7 +242,7 @@
             var data = { "sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetRecentArticelsSection',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetRecentArticelsSection',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -260,7 +260,7 @@
         function GetMediumRectangle() {
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/AdvertisementManagerService.asmx/GetMediumRectangle',
+                url: 'http://2bvision.com/Kids2proSports/AdvertisementManagerService.asmx/GetMediumRectangle',
                 type: 'POST',
                 data: {},
                 contentType: "application/json; charset=utf-8",
@@ -279,7 +279,7 @@
             queryString = getUrlVars()["SportName"]; queryString = queryString.replace('%20', '  ');
             var data = { "_sportName": queryString };
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetRecentVideoUrl',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetRecentVideoUrl',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -304,7 +304,7 @@
             queryString = getUrlVars()["SportName"]; queryString = queryString.replace('%20', '  ');
             var data = { "_sportName": queryString };
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/GetNoVideosMessage',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/GetNoVideosMessage',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -325,7 +325,7 @@
             $.ajax(
 {
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/AdvertisementManagerService.asmx/GetRightAdvertisingColumn",
+    url: "http://2bvision.com/Kids2proSports/AdvertisementManagerService.asmx/GetRightAdvertisingColumn",
     data: "{}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -355,7 +355,7 @@
             var data = { "userName": $.Storage.get("UserName"), "_sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/HandleUserUnFollow',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/HandleUserUnFollow',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -376,7 +376,7 @@
                 }
             });
         }
-           
+
     </script>
     <script type="text/javascript">
 
@@ -387,7 +387,7 @@
             var data = { "userName": $.Storage.get("UserName"), "_sportName": queryString };
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SporthomePageBuilder.asmx/HandleUserFollowing',
+                url: 'http://2bvision.com/Kids2proSports/SporthomePageBuilder.asmx/HandleUserFollowing',
                 type: 'POST',
                 data: JSON.stringify(data),
                 contentType: "application/json; charset=utf-8",
@@ -457,8 +457,7 @@
                 </div>
                 <br />
                 <div class="contentLeft">
-                    <h3>
-                        FEATURED VIDEO</h3>
+                    <h3>FEATURED VIDEO</h3>
                     <h4>
                         <label id="LabelVideoHeading">
                         </label>
@@ -481,17 +480,16 @@
                 </div>
                 <br />
                 <div id="DivFollow">
-                    <h6>
-                        Follow</h6>
+                    <h6>Follow</h6>
                     <input type="button" id="LinkButtonFollow" name="LinkButtonFollow" onclick="HandleUserFollowing()" />
                 </div>
                 <br />
                 <div class="clearfix">
                 </div>
                 <div id="DivUnFollow">
-                    <label id="LiteralIsFollowingMessage" >
+                    <label id="LiteralIsFollowingMessage">
                     </label>
-                    <span   id="LinkButtonUnfollow"  onclick="HandleUserUnFollow()">
+                    <span id="LinkButtonUnfollow" onclick="HandleUserUnFollow()">
                         <label id="LabelStopFollowingMessage">
                         </label>
                     </span>
@@ -504,63 +502,11 @@
                 </div>
                 <br />
             </div>
-            <!-- advertisement area starts-->
-           <!-- <div id="divRightAdds" class="contentRight fRight">
-            </div>-->
-            <!-- advertisement area ends-->
+
         </div>
-        <div class="shareIcons">
-            <h1>
-                Share This</h1>
-            <a href="http://www.facebook.com/pages/Kids2ProSportscom/246679545408252" title="facebook"
-                target="_self">
-                <img alt="facebook" src="images/facebook.png"/></a> <a href="http://www.myspace.com/kids2prosports"
-                    title="myspace" target="_self">
-                    <img alt="myspace" src="images/myspace.png"/></a> <a href="http://sports.groups.yahoo.com/group/Kids2ProSports/"
-                        title="yahoo" target="#">
-                        <img alt="yahoo" src="images/yahoo.png"/></a> <a href="http://www.youtube.com/user/Kids2ProSports?ytsession=z-2bpR1F6KkzxpJXqUAuSu8npv_EAufzd8UxWG-wO5M7JJFFtEn4bzGiAjxyK77nRARXqOXvl0_lHPWLZSbjPLH5W6VE-Awt2DS2O0P13TfAJJIPjPnsPg2r0pvhvlcPvhJAC41cGiHg_FmPuR7MnwCoUVwPrdqonK2wykowr7AfvwqJbBaiQ4qoO7Z7M7ixFyTv2MB6OnHSs0Ztf6LbmUb8dI6xfiexczjVBMOjViU"
-                            title="youtube" target="_self">
-                            <img alt="youtube" src="images/youtube.png"/></a> <a href="http://www.reddit.com/r/sports/comments/pamgt/kids2prosports_expands_it_international_sports/?already_submitted=true"
-                                title="reddit" target="#">
-                                <img alt="reddit" src="images/reddit.png"/></a> <a href="http://www.linkedin.com/in/kids2prosports"
-                                    title="linked" target="_self">
-                                    <img alt="linkedin" src="images/linkedin.png"/></a>
-        </div>
+
         <!-- container ends-->
-        <!-- footer starts -->
-        <div id="footerWrap">
-            <footer>
-              <a href="userprofile.html" title="home" target="_self">Home</a>
-              <a href="Affiliates.html" title="Affiliates" target="_self">Affiliates</a>
-              <a href="CollegiateRecruiting.html"title="Collegiate Recruiting" target="_self">Collegiate Recruiting</a>
-              <a href="NewsAndEvents.html"title="News & Events" target="_self">News & Events</a>
-              <a href="ViewSubSport.html?SportName=Sports Health and Fitness" title="Sports Health & Fitness" target="_self">Sports Health & Fitness</a>
-              <a href="Write4Kids2ProSports.html"title="Write4K2PS" target="_self">Write4K2PS</a>
-              <a href="PersonalHomePage.html" title="PersonalHomePage" target="_self">PersonalHomePage</a>
-          </footer>
-          <div class="dots clear"></div>
-          <!-- Social Icon -->
-          <div class="clearfix">
-              <div class="copyright">&copy; Copyright 2010<br/>Kids2prosports.com</div>
-                <div class="socialIcons">
-                    <a href="http://www.facebook.com/pages/Kids2ProSportscom/246679545408252" title="facebook"
-                        target="_self">
-                        <img alt="facebook" src="images/facebook.png"/></a> <a href="http://www.myspace.com/kids2prosports"
-                            title="myspace" target="_self">
-                            <img alt="myspace" src="images/myspace.png"/></a> <a href="http://sports.groups.yahoo.com/group/Kids2ProSports/"
-                                title="yahoo" target="_self">
-                                <img alt="yahoo" src="images/yahoo.png"/></a> <a href="http://www.youtube.com/user/Kids2ProSports?ytsession=z-2bpR1F6KkzxpJXqUAuSu8npv_EAufzd8UxWG-wO5M7JJFFtEn4bzGiAjxyK77nRARXqOXvl0_lHPWLZSbjPLH5W6VE-Awt2DS2O0P13TfAJJIPjPnsPg2r0pvhvlcPvhJAC41cGiHg_FmPuR7MnwCoUVwPrdqonK2wykowr7AfvwqJbBaiQ4qoO7Z7M7ixFyTv2MB6OnHSs0Ztf6LbmUb8dI6xfiexczjVBMOjViU"
-                                    title="youtube" target="_self">
-                                    <img alt="youtube" src="images/youtube.png"/></a> <a href="http://www.reddit.com/r/sports/comments/pamgt/kids2prosports_expands_it_international_sports/?already_submitted=true"
-                                        title="reddit" target="_self">
-                                        <img alt="reddit" src="images/reddit.png"/></a> <a href="http://www.linkedin.com/in/kids2prosports"
-                                            title="linked" target="_self">
-                                            <img alt="linkedin" src="images/linkedin.png"/></a>
-                </div>
-            </div>
-            <!-- Social Icon -->
-        </div>
-        <!-- footer ends -->
+
     </div>
 </body>
 </html>
