--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/png" />
    
-    <link href="../css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/jquery-1.4.2.js"></script>
 <script type="text/javascript" src="js/jquery.Storage.js"></script>     
 <script type="text/javascript" src="js/jquery.jsonp-2.1.3.min.js"></script>
@@ -31,17 +31,17 @@
           <nav>
               <ul class="clearfix">
                   <li>
-                      <a href="../SportsDefinitions.html" target="_self" title="Sports" >Sports</a>
+                      <a href="SportsDefinitions.html" target="_self" title="Sports" >Sports</a>
                   </li>
                   <li>
-                      <a href="../createArticle.html" title="Articles" target="_self">Articles</a>
+                      <a href="createArticle.html" title="Articles" target="_self">Articles</a>
                   </li>
                   <li>
-                      <a class="ui-link" href="../CreateTeam.html" title="Teams" target="_self">Teams</a>
+                      <a class="ui-link" href="CreateTeam.html" title="Teams" target="_self">Teams</a>
                   </li>
                
                   <li>
-                      <a class="ui-link" href="../CreateFanClub.html" title="Fanclubs" target="_self">Fanclubs</a>
+                      <a class="ui-link" href="CreateFanClub.html" title="Fanclubs" target="_self">Fan Clubs</a>
                   </li>
               </ul>
           </nav>
@@ -52,11 +52,11 @@
             <div class="innermenu">
                 <ul class="clearfix">
         	<li>
-              <a href="../index.html" title="home" target="_self">Home</a>
+              <a href="index.html" title="home" target="_self">Home</a>
           </li>
           <li class="sep"></li>
           <li>
-              <a href="../userprofile.html" title="profile" target="_self">Profile</a>
+              <a href="userprofile.html" title="profile" target="_self">Profile</a>
           </li>
           </ul>
             </div>
@@ -146,33 +146,6 @@
             </div>
         </div>
         <!-- container ends-->
-        <!-- footer starts -->
-        <div id="footerWrap">
-        <footer>
-                <a href="userprofile.html" title="home" target="_self">Home</a>
-              <a href="Affiliates.html" title="Affiliates" target="_self">Affiliates</a>
-              <a href="CollegiateRecruiting.html"title="Collegiate Recruiting" target="_self">Collegiate Recruiting</a>
-              <a href="NewsAndEvents.html"title="News & Events" target="_self">News & Events</a>
-              <a href="ViewSubSport.html?SportName=Sports Health and Fitness" title="Sports Health & Fitness" target="_self">Sports Health & Fitness</a>
-              <a href="Write4Kids2ProSports.html"title="Write4K2PS" target="_self">Write4K2PS</a>
-              <a href="PersonalHomePage.html" title="PersonalHomePage" target="_self">PersonalHomePage</a>
-          </footer>
-          <div class="dots clear"></div>
-          <!-- Social Icon -->
-          <div class="clearfix">
-              <div class="copyright">&copy; Copyright 2010<br>Kids2prosports.com</div>
-                 <div class="socialIcons">
-                <a href="http://www.facebook.com/pages/Kids2ProSportscom/246679545408252" title="facebook" target="_self"><img alt="facebook" src="images/facebook.png"/></a>
-                <a href="http://www.myspace.com/kids2prosports" title="myspace" target="_self"\><img alt="myspace" src="images/myspace.png"/></a>
-                <a href="http://sports.groups.yahoo.com/group/Kids2ProSports/" title="yahoo" target="_self" ><img alt="yahoo" src="images/yahoo.png"/></a>
-                <a href="http://www.youtube.com/user/Kids2ProSports?ytsession=z-2bpR1F6KkzxpJXqUAuSu8npv_EAufzd8UxWG-wO5M7JJFFtEn4bzGiAjxyK77nRARXqOXvl0_lHPWLZSbjPLH5W6VE-Awt2DS2O0P13TfAJJIPjPnsPg2r0pvhvlcPvhJAC41cGiHg_FmPuR7MnwCoUVwPrdqonK2wykowr7AfvwqJbBaiQ4qoO7Z7M7ixFyTv2MB6OnHSs0Ztf6LbmUb8dI6xfiexczjVBMOjViU" title="youtube" target="_self"><img alt="youtube" src="images/youtube.png"></a>
-                <a href="http://www.reddit.com/r/sports/comments/pamgt/kids2prosports_expands_it_international_sports/?already_submitted=true" title="reddit" target="_self"><img alt="reddit" src="images/reddit.png"></a>
-                <a href="http://www.linkedin.com/in/kids2prosports" title="linked" target="_self"><img alt="linkedin" src="images/linkedin.png"/></a>
-              </div>
-            </div>
-            <!-- Social Icon -->
-        </div>
-        <!-- footer ends -->
     </div>
 </body>
 </html>
