--- a/CreateTeam.html
+++ b/CreateTeam.html
@@ -32,7 +32,7 @@
             $.ajax(
 {
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/createarticle.asmx/GetDropDownListSportCategory",
+    url: "http://2bvision.com/Kids2proSports/createarticle.asmx/GetDropDownListSportCategory",
     data: "{}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -67,7 +67,7 @@
                 $.ajax(
 {
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/createarticle.asmx/SqlDataSourceSportsFromCategory",
+    url: "http://2bvision.com/Kids2proSports/createarticle.asmx/SqlDataSourceSportsFromCategory",
     data: "{MajorSport:'" + MajorSport + "'}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -105,7 +105,7 @@
 {
 
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/createarticle.asmx/SqlDataSourceSportFromCategoryWithGender",
+    url: "http://2bvision.com/Kids2proSports/createarticle.asmx/SqlDataSourceSportFromCategoryWithGender",
 
     data: JSON.stringify(data),
     contentType: "application/json; charset=utf-8",
@@ -138,7 +138,7 @@
             $.ajax(
 {
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/CascadingCitySelection.asmx/GetDropDownListCountry",
+    url: "http://2bvision.com/Kids2proSports/CascadingCitySelection.asmx/GetDropDownListCountry",
     data: "{}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -170,7 +170,7 @@
             $.ajax(
 {
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/CascadingCitySelection.asmx/GetDropDownListUsStates",
+    url: "http://2bvision.com/Kids2proSports/CascadingCitySelection.asmx/GetDropDownListUsStates",
     data: "{}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -274,7 +274,7 @@
 {
 
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/CascadingCitySelection.asmx/GetDropDownListCity",
+    url: "http://2bvision.com/Kids2proSports/CascadingCitySelection.asmx/GetDropDownListCity",
     data: "{county:'" + county + "','state':'" + state + "'}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -307,7 +307,7 @@
 {
 
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/CascadingCitySelection.asmx/GetDropDownListCounty",
+    url: "http://2bvision.com/Kids2proSports/CascadingCitySelection.asmx/GetDropDownListCounty",
     data: "{state:'" + state + "'}",
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -342,7 +342,7 @@
 {
 
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/CascadingCitySelection.asmx/GetDropDownListCounty",
+    url: "http://2bvision.com/Kids2proSports/CascadingCitySelection.asmx/GetDropDownListCounty",
     data: "{state:'" + state + "'}",
     data: JSON.stringify(data),
     contentType: "application/json; charset=utf-8",
@@ -420,7 +420,7 @@
                 $.ajax(
 {
     type: "POST",
-    url: "http://2bvision.com/kids2promobile/DataAccessService.asmx/UpdateTeam",
+    url: "http://2bvision.com/Kids2proSports/DataAccessService.asmx/UpdateTeam",
     data: JSON.stringify(DObject),
     contentType: "application/json; charset=utf-8",
     dataType: "json",
@@ -446,28 +446,28 @@
 <body>
     <div id="wraper">
         <header>
-          <nav>
-              <ul class="clearfix">
-                  <li>
-                      <a href="SportsDefinitions.html" target="_self" title="Sports" >Sports</a>
-                  </li>
-                  <li>
-                      <a href="createArticle.html" title="Articles" target="_self">Articles</a>
-                  </li>
-                  <li>
-                      <a class="ui-link" href="CreateTeam.html" title="Teams" target="_self">Teams</a>
-                  </li>
-                  
-                  <li>
-                      <a class="ui-link" href="CreateFanClub.html" title="Fanclubs" target="_self">Fanclubs</a>
-                  </li>
-              </ul>
-          </nav>
-      </header>
+            <nav>
+                <ul class="clearfix">
+                    <li>
+                        <a href="SportsDefinitions.html" target="_self" title="Sports">Sports</a>
+                    </li>
+                    <li>
+                        <a href="createArticle.html" title="Articles" target="_self">Articles</a>
+                    </li>
+                    <li>
+                        <a class="ui-link" href="CreateTeam.html" title="Teams" target="_self">Teams</a>
+                    </li>
+
+                    <li>
+                        <a class="ui-link" href="CreateFanClub.html" title="Fanclubs" target="_self">Fan Clubs</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <!-- header ends -->
         <div class="innermenu">
             <ul class="clearfix">
-                <li><a href="../index.html" title="home" target="_self">Home</a> </li>
+                <li><a href="index.html" title="home" target="_self">Home</a> </li>
                 <li class="sep"></li>
                 <li><a href="userprofile.html" title="profile" target="_self">Profile</a> </li>
             </ul>
@@ -486,22 +486,18 @@
                                 <h5>
                                     <b>Team Information</b></h5>
                                 <br>
-                                <h5>
-                                    Sport</h5>
+                                <h5>Sport</h5>
                                 <div class="row newuser">
                                     <div id='loadingmessage' style='display: none'>
                                         <img src='images/ajax-loader.gif' />
-                                        <span id="spnLoading" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-                                            Searching Please Wait...</span>
+                                        <span id="spnLoading" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">Searching Please Wait...</span>
                                     </div>
                                     <div id="ageRegister">
-                                        <h3>
-                                            Sport Category (Required)</h3>
+                                        <h3>Sport Category (Required)</h3>
                                         <select name="DropDownListSportCategory" id="DropDownListSportCategory">
                                             <option value="0" selected="true">--------</option>
                                         </select>
-                                        <h3>
-                                            Gender / Age Identification (Optional)</h3>
+                                        <h3>Gender / Age Identification (Optional)</h3>
                                         <select name="DropDownListGenderIDe" id="DropDownListGenderIDe">
                                             <option selected="true" value="0">--------</option>
                                             <option value="Boy's">Boy's</option>
@@ -516,39 +512,32 @@
                                             <option value="Women's College">Women's College</option>
                                             <option value="Youth">Youth</option>
                                         </select>
-                                        <h3>
-                                            Sport Name (Required)</h3>
+                                        <h3>Sport Name (Required)</h3>
                                         <select name="DropDownListSportName" id="DropDownListSportName">
                                             <option selected="true" value="0">--------</option>
                                         </select>
-                                        <h3>
-                                            School or Organization</h3>
+                                        <h3>School or Organization</h3>
                                         <input type="text" name="TextBoxChangeAffiliation" id="TextBoxChangeAffiliation" />
-                                        <h3>
-                                            Team Name</h3>
+                                        <h3>Team Name</h3>
                                         <input type="text" name="TextBoxTeamNameChange" id="TextBoxTeamNameChange" />
                                     </div>
                                     <div id="ageRegister">
                                         <h5>
                                             <b>Team Location Information</b></h5>
                                         <br>
-                                        <h3>
-                                            Country</h3>
+                                        <h3>Country</h3>
                                         <select name="DropDownListCountry" id="DropDownListCountry">
                                             <option selected="true" value="0">--------</option>
                                         </select>
-                                        <h3>
-                                            State</h3>
+                                        <h3>State</h3>
                                         <select name="DropDownListUsStates" id="DropDownListUsStates">
                                             <option value="0" selected="true">--------</option>
                                         </select>
-                                        <h3>
-                                            County</h3>
+                                        <h3>County</h3>
                                         <select name="DropDownListCounty" id="DropDownListCounty">
                                             <option value="0" selected="true">--------</option>
                                         </select>
-                                        <h3>
-                                            City</h3>
+                                        <h3>City</h3>
                                         <select name="DropDownListCity" id="DropDownListCity">
                                             <option value="0" selected="true">--------</option>
                                         </select>
@@ -558,13 +547,11 @@
                                         <a onclick="ShowCityText()" id="HrefMyCity" title="My City is Not Listed">My City is
                                             Not Listed</a>
                                         <br />
-                                        <a onclick="HideCityText()" id="HrefSerachCity" title="Search Cities in My Country">
-                                            Search Cities in My County</a>
+                                        <a onclick="HideCityText()" id="HrefSerachCity" title="Search Cities in My Country">Search Cities in My County</a>
                                     </div>
                                     <div id="ageRegister">
-                                        <h5>
-                                            Team Description</h5>
-                                        <br/>
+                                        <h5>Team Description</h5>
+                                        <br />
                                         <textarea id="TextBoxDescription" rows="10" cols="30" tabindex="1" name="TextBoxDescription">                         	
                                             </textarea>
                                     </div>
@@ -582,46 +569,9 @@
                 </div>
             </div>
             <!-- left area ends-->
-            <div id="divRightAdds" class="contentRight fRight">
-            </div>
-            <!-- advertisement area ends-->
+
         </div>
-        <!-- container ends-->
-        <!-- footer starts -->
-        <footer>
-                <a href="userprofile.html" title="home" target="_self">Home</a>
-              <a href="Affiliates.html" title="Affiliates" target="_self">Affiliates</a>
-              <a href="CollegiateRecruiting.html"title="Collegiate Recruiting" target="_self">Collegiate Recruiting</a>
-              <a href="NewsAndEvents.html"title="News & Events" target="_self">News & Events</a>
-              <a href="ViewSubSport.html?SportName=Sports Health and Fitness" title="Sports Health & Fitness" target="_self">Sports Health & Fitness</a>
-              <a href="Write4Kids2ProSports.html"title="Write4K2PS" target="_self">Write4K2PS</a>
-              <a href="PersonalHomePage.html" title="PersonalHomePage" target="_self">PersonalHomePage</a>
-          </footer>
-        <div class="dots clear">
-        </div>
-        <!-- Social Icon -->
-        <div class="clearfix">
-            <div class="copyright">
-                &copy; Copyright 2010<br>
-                Kids2prosports.com</div>
-            <div class="socialIcons">
-                <a href="http://www.facebook.com/pages/Kids2ProSportscom/246679545408252" title="facebook"
-                    target="_self">
-                    <img alt="facebook" src="images/facebook.png" /></a> <a href="http://www.myspace.com/kids2prosports"
-                        title="myspace" target="_self">
-                        <img alt="myspace" src="images/myspace.png" /></a> <a href="http://sports.groups.yahoo.com/group/Kids2ProSports/"
-                            title="yahoo" target="#">
-                            <img alt="yahoo" src="images/yahoo.png" /></a> <a href="http://www.youtube.com/user/Kids2ProSports?ytsession=z-2bpR1F6KkzxpJXqUAuSu8npv_EAufzd8UxWG-wO5M7JJFFtEn4bzGiAjxyK77nRARXqOXvl0_lHPWLZSbjPLH5W6VE-Awt2DS2O0P13TfAJJIPjPnsPg2r0pvhvlcPvhJAC41cGiHg_FmPuR7MnwCoUVwPrdqonK2wykowr7AfvwqJbBaiQ4qoO7Z7M7ixFyTv2MB6OnHSs0Ztf6LbmUb8dI6xfiexczjVBMOjViU"
-                                title="youtube" target="_self">
-                                <img alt="youtube" src="images/youtube.png" /></a> <a href="http://www.reddit.com/r/sports/comments/pamgt/kids2prosports_expands_it_international_sports/?already_submitted=true"
-                                    title="reddit" target="#">
-                                    <img alt="reddit" src="images/reddit.png" /></a> <a href="http://www.linkedin.com/in/kids2prosports"
-                                        title="linked" target="_self">
-                                        <img alt="linkedin" src="images/linkedin.png" /></a>
-            </div>
-            <!-- Social Icon -->
-        </div>
-        <!-- footer ends -->
+
     </div>
 </body>
 </html>
