--- a/SportsDefinitionOlympics.html
+++ b/SportsDefinitionOlympics.html
@@ -47,7 +47,7 @@
             }
 
             $.ajax({
-                url: 'http://2bvision.com/kids2promobile/SourceSportDataGrid.asmx/GetSportOlympics',
+                url: 'http://2bvision.com/Kids2proSports/SourceSportDataGrid.asmx/GetSportOlympics',
                 type: 'POST',
                 data: "{}",
                 contentType: "application/json; charset=utf-8",
@@ -86,7 +86,7 @@
                   </li>
                   
                   <li>
-                      <a href="CreateFanClub.html" title="Fanclubs" target="_self">Fanclubs</a>
+                      <a href="CreateFanClub.html" title="Fanclubs" target="_self">Fan Clubs</a>
                   </li>
               </ul>
           </nav>
@@ -175,35 +175,6 @@
               </div>
         </div>
         <!-- container ends-->
-        <!-- footer starts -->
-        <div id="footerWrap">
-          <footer>
-              <a href="userprofile.html" title="home" target="_self">Home</a>
-              <a href="Affiliates.html" title="Affiliates" target="_self">Affiliates</a>
-              <a href="CollegiateRecruiting.html"title="Collegiate Recruiting" target="_self">Collegiate Recruiting</a>
-              <a href="NewsAndEvents.html"title="News & Events" target="_self">News & Events</a>
-              <a href="ViewSubSport.html?SportName=Sports Health and Fitness" title="Sports Health & Fitness" target="_self">Sports Health & Fitness</a>
-              <a href="Write4Kids2ProSports.html"title="Write4K2PS" target="_self">Write4K2PS</a>
-              <a href="PersonalHomePage.html" title="PersonalHomePage" target="_self">PersonalHomePage</a>
-          </footer>
-          <div class="dots clear"></div>
-          <!-- Social Icon -->
-          <div class="clearfix">
-              <div class="copyright">&copy; Copyright 2010<br/>Kids2prosports.com</div>
-                <div class="socialIcons">
-                    <a href="http://www.facebook.com/pages/Kids2ProSportscom/246679545408252" title="facebook" target="_self"> <img alt="facebook" src="images/m.facebook.png"/></a>
-                           <a href="http://www.myspace.com/kids2prosports" title="myspace" target="_self"><img alt="myspace" src="images/m.myspace.png"/></a>
-                           <a href="http://groups.yahoo.com/group/Kids2ProSports" title="yahoo"><img alt="yahoo" src="images/m.yahoo.png"/></a>
-                           <a href="http://www.reddit.com/r/sports/comments/pamgt/kids2prosports_expands_it_international_sports/?already_submitted=true"title="reddit" target="_self"><img alt="reddit" src="images/m.reddit.png"/></a>
-                           <a href="http://www.linkedin.com/in/kids2prosports  "" title="linkdin"> <img alt="linkdin" src="images/m.linkedin.png"/></a> 
-                           <a href="http://www.flickr.com/photos/kids2prosports/" title="Flicker" target="_self"> <img alt="Flicker" src="images/m.flckr.png"/></a>
-                           <a href="http://www.youtube.com/user/Kids2ProSports?ytsession=z-2bpR1F6KkzxpJXqUAuSu8npv_EAufzd8UxWG-wO5M7JJFFtEn4bzGiAjxyK77nRARXqOXvl0_lHPWLZSbjPLH5W6VE-Awt2DS2O0P13TfAJJIPjPnsPg2r0pvhvlcPvhJAC41cGiHg_FmPuR7MnwCoUVwPrdqonK2wykowr7AfvwqJbBaiQ4qoO7Z7M7ixFyTv2MB6OnHSs0Ztf6LbmUb8dI6xfiexczjVBMOjViU" title="Youtube" target="_self"> <img alt="Youtube" src="images/m.youtube.png"/></a>
-                           
-                </div>
-            </div>
-            <!-- Social Icon -->
-        </div>
-        <!-- footer ends -->
     </div>
 
 </body>
