--- a/beDiscovered.html
+++ b/beDiscovered.html
@@ -27,19 +27,17 @@
           <nav>
               <ul class="clearfix">
                   <li>
-                      <a href="#.html" title="home" target="#">Sports</a>
+                      <a href="SportsDefinitions.html" target="_self" title="Sports" >Sports</a>
                   </li>
                   <li>
-                      <a href="#.html" title="mediakit" target="#">Articles</a>
+                      <a href="createArticle.html" title="Articles" target="_self">Articles</a>
                   </li>
                   <li>
-                      <a class="ui-link" href="#.html" title="faq" target="#">Teams</a>
+                      <a class="ui-link" href="CreateTeam.html" title="Teams" target="_self">Teams</a>
                   </li>
+               
                   <li>
-                      <a class="ui-link" href="#.html" title="feedback" target="#">Messages</a>
-                  </li>
-                  <li>
-                      <a class="ui-link" href="#.html" title="contactus" target="#">Fanclubs</a>
+                      <a class="ui-link" href="CreateFanClub.html" title="Fanclubs" target="_self">Fan Clubs</a>
                   </li>
               </ul>
           </nav>
@@ -49,12 +47,18 @@
         <!-- inner menu starts-->
         <div class="innermenu">
             <ul class="clearfix">
-                <li><a href="#.html" title="home" target="#">Home</a> </li>
-                <li class="sep"></li>
-                <li><a href="#.html" title="mediakit" target="#">Profile</a> </li>
-                <li class="sep"></li>
-                <li><a class="ui-link" href="#.html" title="faq" target="#">MessageBoard</a> </li>
-            </ul>
+        	 <li><a href="../index.html" title="home" target="_self">Home</a> </li>
+                    <li class="sep"></li>
+                    <li><a href="Welcome.html" title="profile" target="_self">Welcome</a> </li>
+                    <li class="sep"></li>
+                    <li><a href="sports.html" title="Sports" target="_self">Sports</a> </li>
+                    <li class="sep"></li>
+                    <li><a href="multicultural.html" title="profile" target="_self">Multicultural</a> </li>
+                    <li class="sep"></li>
+                    <li><a href="beDiscovered.html" title="profile" target="_self">BeDiscovered</a> </li>
+                    <li class="sep"></li>
+                    <li><a href="mediaKit.html" title="profile" target="_self">Media Resources</a> </li>
+          </ul>
         </div>
         <!-- inner menu ends-->
         <div class="contetns">
@@ -123,41 +127,6 @@
             </div>
         </div>
         <!-- container ends-->
-        <!-- footer starts -->
-        <div id="footerWrap">
-            <footer>
-               <a href="userprofile.html" title="home" target="_self">Home</a>
-              <a href="Affiliates.html" title="Affiliates" target="_self">Affiliates</a>
-              <a href="CollegiateRecruiting.html"title="Collegiate Recruiting" target="_self">Collegiate Recruiting</a>
-              <a href="NewsAndEvents.html"title="News & Events" target="_self">News & Events</a>
-              <a href="ViewSubSport.html?SportName=Sports Health and Fitness" title="Sports Health & Fitness" target="_self">Sports Health & Fitness</a>
-              <a href="Write4Kids2ProSports.html"title="Write4K2PS" target="_self">Write4K2PS</a>
-              <a href="PersonalHomePage.html" title="PersonalHomePage" target="_self">PersonalHomePage</a>
-          </footer>
-            <div class="dots clear">
             </div>
-            <!-- Social Icon -->
-            <div class="clearfix">
-                <div class="copyright">
-                    &copy; Copyright 2010<br>
-                    Kids2prosports.com</div>
-                <div class="socialIcons">
-                    <a href="#.html" title="facebook" target="#">
-                        <img alt="facebook" src="images/facebook.png" /></a> <a href="#.html" title="myspace"
-                            target="#">
-                            <img alt="myspace" src="images/myspace.png" /></a> <a href="#.html" title="yahoo"
-                                target="#">
-                                <img alt="yahoo" src="images/yahoo.png" /></a> <a href="#.html" title="youtube" target="#">
-                                    <img alt="youtube" src="images/youtube.png" /></a> <a href="#.html" title="reddit"
-                                        target="#">
-                                        <img alt="reddit" src="images/reddit.png" /></a> <a href="#.html" title="linked"
-                                            target="#">
-                                            <img alt="linkedin" src="images/linkedin.png" /></a>
-                </div>
-            </div>
-            <!-- Social Icon -->
-        </div>
-        <!-- footer ends -->
-    </div>
 </body>
 </html>
